# cork

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  linter.yml  tests.yml
django_dx/: celeryapp.py
