[tool.poetry]
name = "CORK"
version = "0.1"
description = "Django Setup"
authors = ["N. Jodi Basterash"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_dx"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.6"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
celery = {extras = ["redis"], version = "^5.2.7"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1" #pep8 pyton style guide
pylint-django = "^2.5.3" #python linter with django capabilities
pytest-django = "^4.5.2" #python tester for django
python-dotenv = "^1.0.1" #environments change in testing / production
isort = "^5.10.1" #sort imports

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
